--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,4 +6,32 @@ h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
+
+}
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p{
+  font-size: 14px;
+}
+
+.page-links {
+  font-size: 18px;
+  color: white;
+}
+.background-image{
+background-image: url(../images/the-flatiron-building.png);
+
+}
+
+.footer{
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
 }
